--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-    "name": "template-next-ts-scss",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start"
-    },
-    "dependencies": {
-        "next": "10.0.1",
-        "react": "17.0.1",
-        "react-dom": "17.0.1"
-    },
-    "devDependencies": {
-        "@types/node": "^14.14.7",
-        "@types/react": "^16.9.56",
-        "sass": "^1.29.0",
-        "typescript": "^4.0.5"
-    }
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "prettier": "prettier --write ."
+  },
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "next": "10.0.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "prettier": "2.2.1",
+    "sass": "^1.29.0",
+    "typescript": "^4.0.5"
+  }
 }
